<resources>
    <string name="app_name">RecommendationApp</string>
    <string name="filters_title">Фильтры</string>
    <string name="cancel_sheet">Сбросить</string>
    <string name="show_places_sheet">Показать места</string>
    <string name="main_nav_item">Главное</string>
    <string name="places_nav_item">Места</string>
    <string name="fav_nav_item">Избранное</string>
    <string name="profile_nav_item">Профиль</string>
    <string name="search">Поиск</string>
    <string name="show_places_short">Показать</string>
    <string name="filters_btn">Фильтры</string>
    <string name="recommendations_btn">Рекомендации</string>
    <string name="work_time">Время работы</string>
    <string name="more">Ещё</string>
    <string name="cancel">Отмена</string>
    <string name="share">Поделиться</string>
    <string name="to_bookmarks">В закладки</string>
    <string name="to_bookmarks_descriprion">Добавить в закладки</string>
    <string name="like">Нравится</string>
    <string name="address">Адрес</string>
    <string name="work_hours">Режим работы</string>
    <string name="contacts">Контакты</string>
    <string name="vk">VK</string>
    <string name="instagram">Instagram</string>
    <string name="recommend_title">Рекомендуем!</string>
    <string name="recommend_description">Это место есть в списке рекомендованных. Сохраните его, чтобы не забыть</string>
    <string name="want_to_visit">Хочу сходить</string>
    <string name="is_open">Сейчас открыто</string>
    <string name="show_on_map">Смотреть на карте</string>
    <string name="like_title">Уже бывали тут?</string>
    <string name="like_description">Добавьте заведение в список любимых мест. Будем рекомендовать похожие</string>
    <string name="favourite_place">Любимое место</string>
    <string name="favourite_places">Любимые места</string>
    <string name="favourite">Избранное</string>
    <string name="loading_data">Загрузка данных…</string>
    <string name="tags_and_compilations">Теги и подборки</string>
    <string name="dish_photos">Фотографии</string>
    <string name="chain">Филиалы</string>
    <string name="similar_places">Похожие места</string>
    <string name="profile">Профиль</string>
    <string name="register_header">Зарегистрируйтесь, чтобы получать индивидуальные рекомендации на всех устройствах</string>
    <string name="provide_email">Укажите ваш Email</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="repeat_password">Введите пароль еще раз</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="account_exists">Уже есть аккаунт?\u00A0</string>
    <string name="sign_in_btn">Войти</string>
    <string name="login_header">Войдите, чтобы получить доступ к своему избранному и рекомендациям</string>
    <string name="enter_email">Введите ваш email</string>
    <string name="enter_password">Введите ваш пароль</string>
    <string name="enter">Войти</string>
    <string name="no_account">Нет аккаунта?\u00A0</string>
    <string name="create_account_btn">Создать</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="wrong_credentials">Не верный логин или пароль</string>
    <string name="welcome_header">Мы рекомендуем Кафе и Рестораны.</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="welcome_description">Приготовим для вас индивидуальные рекомендации кафе и ресторанов</string>
    <string name="next">Дальше</string>
    <string name="search_description">Наши алгоритмы рекомендаций опираются на список ваших любимых кафе и ресторанов\n\nЭто позволяет им понять ваши индивидуальные вкусы</string>
    <string name="onboarding_search_header">Укажите несколько мест, которые вам нравятся, а наши алгоритмы подберут похожие на них</string>
    <string name="enter_cafe_name">Введите название ресторана</string>
    <string name="skip">Пропустить</string>
    <string name="onboarding_favourite_description">Списком любимых мест можно будет управлять в любое время в разделе «Избранное»</string>
    <string name="enter_account">Вход в аккаунт</string>
    <string name="back">Назад</string>
    <string name="start_use">Начать пользоваться</string>
    <string name="finish_footer">Вы можете в любой момент редактировать список любимых мест, а рекомендации будут переподбираться автоматически</string>
    <string name="finish">Готово!</string>
    <string name="recommended_number_found">На основе списка ваших любимых мест рекомендуем %1$d кафе и ресторанов</string>
    <string name="account_email">Вы авторизовались как %1$s</string>
    <string name="data_synchronized_hint">Ваше избранное и рекомендации привязаны к этому аккаунту</string>
    <string name="exit_account">Выйти</string>
    <string name="fav_empty_message">Тут пока пусто…</string>
    <string name="mark_empty_message">И тут пока пусто…</string>
    <string name="fav_empty_comment">Добавляйте заведения в любимые места, чтобы мы могли рекомендовать похожие</string>
    <string name="mark_empty_comment">Добавляйте заведения в список мест, которые хотите посетить</string>
</resources>