<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <item-->
<!--        android:id="@+id/main_nav_item"-->
<!--        android:enabled="false"-->
<!--        android:icon="@drawable/ic_double_star_nav_24"-->
<!--        android:title="@string/main_nav_item" />-->
    <item
        android:id="@+id/places_nav_item"
        android:enabled="true"
        android:icon="@drawable/ic_place_nav_24"
        android:title="@string/places_nav_item" />
    <item
        android:id="@+id/fav_nav_item"
        android:enabled="true"
        android:icon="@drawable/ic_fav_nav_24"
        android:title="@string/fav_nav_item" />
    <item
        android:id="@+id/profile_nav_item"
        android:enabled="true"
        android:icon="@drawable/ic_profile_nav_24"
        android:title="@string/profile_nav_item" />
</menu>