<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:paddingHorizontal="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/address"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:text="Сочи, ул. Воровского, 35"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_on_map"
            style="@style/Widget.RecommendationApp.Chip.More" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/work_hours"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/work_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:text="Ежедневно, 12:00-00.00"/>
<!--        <TextView-->
<!--            android:id="@+id/is_open"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:textColor="@color/green_500"-->
<!--            android:text="@string/is_open"/>-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/contacts"
            android:textStyle="bold"
            android:textSize="20sp" />
        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_phone_24"
                android:text="+7 (999) 000-00-00"
                style="@style/Widget.RecommendationApp.Chip.Contact" />
        </com.google.android.material.chip.ChipGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Социальные сети"
            android:paddingVertical="10dp" />
        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/vk_round_color_icon"
                style="@style/Widget.RecommendationApp.Chip.Social"
                android:text="@string/vk" />
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/instagram_round_icon"
            style="@style/Widget.RecommendationApp.Chip.Social"
            android:text="@string/instagram" />
    </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/recommend_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_green_holder">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommend_title"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:text="@string/recommend_description"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/recommend_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_to_visit"
            app:chipIcon="@drawable/ic_bookmark_border_white_24"
            style="@style/Widget.RecommendationApp.Chip.Mark" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/favourite_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_purple_holder">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_title"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:text="@string/like_description"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/favourite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite_place"
            app:chipIcon="@drawable/ic_favorite_border_white_24"
            style="@style/Widget.RecommendationApp.Chip.Like" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/tags_and_compilations"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/dish_photos"
            android:textStyle="bold"
            android:textSize="20sp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dish_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/chain"
            android:textStyle="bold"
            android:textSize="20sp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chain_recycler"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginVertical="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/similar_places"
            android:textStyle="bold"
            android:textSize="20sp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similar_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp" />
    </LinearLayout>
</LinearLayout>